# tame-swarm

./: .gitignore  Implementing_Multi-Scale_Competency_in_Large_Language_Models-A_Bio-Inspired_Architecture_for_Agential_Homeostasis.md  LICENSE  README.md  docker-compose.test.yml  pyproject.toml
cortex/: .dockerignore  .env.example  Dockerfile  Dockerfile.chat  README.md  chat_ui.py  dev.bat  dev.ps1  docker-compose.dev.yml  docker-compose.train.yml  main.py  mob.py  requirements.txt  setup_tame.py  steering.py  train.bat  train.ps1  train.py
tame/: .dockerignore  Dockerfile  Dockerfile.chat  README.md  app.py  chat_ui.py  config.py  dependencies.py  dev.bat  dev.ps1  docker-compose.dev.yml  docker-compose.train.yml  main.py  mob.py  models.py  requirements.txt  routes.py  setup_tame.py  steering.py  train.bat  train.ps1  train.py
tame/mob/: __init__.py  auction.py  core.py  experts.py  mob_config.py  utils.py  wealth.py
tests/: conftest.py  test_api.py  test_auction.py  test_config.py  test_experts.py  test_mixture.py  test_mob_config.py  test_steering.py  test_wealth_updates.py
