[project]
name = "tame-swarm"
version = "0.1.0"
description = "Technological Approach to Mind Everywhere — agential swarm architecture for LLMs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.44.0",
    "accelerate>=0.25.0",
    "sentencepiece",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
train = [
    "datasets>=2.14.0",
    "peft>=0.7.0",
    "tqdm>=4.66.0",
]
serve = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]
chat = [
    "gradio>=4.0.0",
    "requests>=2.31.0",
    "plotly>=5.18.0",
]
dev = [
    "tame-swarm[train,serve,chat]",
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["tame"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
